// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 140606,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 140827,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 294621,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 322426,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 330754,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 305642,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 219752,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 219886,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 242816,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 220606,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 378778,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 220752,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 369166,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 314846,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 305025,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 190091,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 198565,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 397505,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 265064,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 382552,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 258398,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 318552,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 268199,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 295667,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 397050,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 412001,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 340854,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 407431,
}
`;
